k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: sleepingducky/inventory-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
  - port: 4002
    targetPort: 4002
  type: ClusterIP
