k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: sleepingducky/orders-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
  - port: 4003
    targetPort: 4003
  type: ClusterIP
